[package]
name = "jsonperftest"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
serde_json = "1.0.40"
serde = { version = "1.0.99", features = ["derive"] }
timeit = "0.1.2"

[profile.release]
debug = true

